Fixed 1 pixel gap to the left of the sidebar

--- a/public/stylesheets/my_exp.css
+++ b/public/stylesheets/my_exp.css
@@ -169,7 +169,7 @@ li {
 #myexp_sidebar {
 	padding: 0 0.5em 0 0.5em;
 	background-color: #456AAA;
-	border-left: 0px solid #DEDEDE;
+	border-right: 1px solid #DEDEDE;
 	border-width: 0 0 1px 1px;  
 }
 
